# MinialCPythonModule

./: CMakeLists.txt  README.md  setup.py
src/: hello.c
